Organize extension: separate folders for Chrome, Edge, Firefox with proper manifests

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -23,7 +23,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "tabmemory@yourdomain.com",
+      "id": "tabmemory@allenjohn",
       "strict_min_version": "91.0"
     }
   }
